kubernetes/mini/core/database/crunchy-postgres/userinit-controller/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: userinit-controller
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: crunchy-userinit-controller
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: crunchy-postgres
      toPorts:
        - ports:
            - port: '5432'
